--- a/github/workflows/upload-images.yml
+++ b/github/workflows/upload-images.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Upload images to image repo
         run: |
           git clone https://x-access-token:${{ secrets.IMG_TOKEN }}@github.com/hanzhe93/my-images.git
-          cp -r images/* my-images/img/
+          cp -r images/* my-images
           cd my-images
           git config user.name "hanzhe93"
-          git config user.email "hanzhe93@github.com"
+          git config user.email "hanzhe93@gmail.com"
           git add .
           git commit -m "Upload new images from article"
           git push origin main
@@ -31,7 +31,7 @@ jobs:
       - name: Commit replaced markdown
         run: |
           git config user.name "hanzhe93"
-          git config user.email "hanzhe93@github.com"
+          git config user.email "hanzhe93@gmail.com"
           git add .
           git commit -m "Update image links"
           git push origin main
